[metadata]
name = v0tools
version = file: VERSION
url = https://v0tools.stev0.me
project_urls =
    Changes = https://github.com/shollingsworth/v0tools/blob/main/CHANGELOG.md
    Source Code = https://github.com/shollingsworth/v0tools
    Issue Tracker = https://github.com/shollingsworth/v0tools/issues/
    Twitter = https://twitter.com/_stevo
    Documentation = https://v0tools.stev0.me

license = MIT
author = Steven Hollingsworth (stev0)
author_email = hollingsworth.stevend@gmail.com
description = This collection of tools helps navigate some of the more tedious parts of CTF'ing
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    Topic :: Security :: Cryptography
keywords =
    hacking
    ctf
    crypto

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.package_data]
    * =
        data/*
